--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
+    "agora-rn-uikit": "^5.0.2",
     "axios": "^1.13.2",
     "expo": "~54.0.33",
     "expo-audio": "~1.1.1",
     "expo-av": "~16.0.8",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.10",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
@@ -31,6 +31,7 @@
     "expo-font": "^14.0.11",
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-media-library": "~18.2.1",
     "expo-notifications": "^0.32.16",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "^31.0.13",
