--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
+    "name": "Word of Covenant",
     "slug": "word-of-covenant",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/Word of Covenant Logo.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/Word of Covenant Logo.png",
+      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#1e3a8a"
     },
@@ -22,18 +23,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/Word of Covenant Logo.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#1e3a8a"
       },
       "splash": {
-        "image": "./assets/images/Word of Covenant Logo.png",
+        "image": "./assets/splash-icon.png",
         "resizeMode": "contain",
-        "backgroundColor": "#1e3a8a",
-        "mdpi": "./assets/images/Word of Covenant Logo.png",
-        "hdpi": "./assets/images/Word of Covenant Logo.png",
-        "xhdpi": "./assets/images/Word of Covenant Logo.png",
-        "xxhdpi": "./assets/images/Word of Covenant Logo.png",
-        "xxxhdpi": "./assets/images/Word of Covenant Logo.png"
+        "backgroundColor": "#1e3a8a"
       },
       "package": "com.wordofcovenant.app",
       "permissions": [
@@ -47,11 +43,12 @@
       ]
     },
     "web": {
-      "favicon": "./assets/images/Word of Covenant Logo.png"
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-web-browser",
-      "expo-audio"
+      "expo-audio",
+      "expo-system-ui"
     ]
   }
 }
